clusters/kuma-final-demo/authelia/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    kuma.io/sidecar-injection: enabled
  annotations:
    kuma.io/mesh: default
