clusters/kuma-final-demo/authelia/nginx.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia-proxy
  namespace: authelia
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-config
              subPath: nginx.conf
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/snippets/authelia-location.conf
              subPath: authelia-location.conf
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/snippets/proxy.conf
              subPath: proxy.conf
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/snippets/authelia-authrequest.conf
              subPath: authelia-authrequest.conf
              readOnly: true
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: proxy.conf
                path: proxy.conf
              - key: authelia-location.conf
                path: authelia-location.conf
              - key: authelia-authrequest.conf
                path: authelia-authrequest.conf
