clusters/kuma-final-demo/authelia/proxy.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia-proxy
  namespace: authelia
spec:
  selector:
    app: nginx
  ports:
    # - name: http
    #   port: 80
    #   targetPort: 80
    - name: https
      port: 443
      targetPort: 443
