clusters/kuma-final-demo/authelia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: authelia
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/protocols: "https"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
    - host: bookstack.kuberbitnetes.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: authelia-proxy
                port:
                  number: 443
    - host: whoami.kuberbitnetes.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: authelia-proxy
                port:
                  number: 443
  tls:
    - secretName: bookstack-tls
      hosts:
        - bookstack.kuberbitnetes.xyz
    - secretName: whoami-auth-tls
      hosts:
        - whoami-auth.kuberbitnetes.xyz
